# contractscanner

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
contractmonitor/: cli.py  config.py  llm.py  models.py  notify.py  scanner.py  server.py  state.py
contractmonitor/scanners/: base.py  checkbook.py  cityrecord.py  nycopendata.py  passport.py  samgov.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
windows/: install.bat  install.ps1  uninstall.bat
